--- a/static/css/components/pages.scss
+++ b/static/css/components/pages.scss
@@ -18,9 +18,7 @@
 }
 
 .welcome-message {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @extend %centralise-inner-container;
     width: 46%;
 }
 
@@ -49,8 +47,9 @@
 
 .welcome-message-content p {
     color: $white;
-    font-size: 18px;
+    font-size: 15px;
     line-height: 28px;
+    font-family: 'Oswald', sans-serif;
 }
 
 .welcome-message-content button {
@@ -121,9 +120,7 @@
 .left,
 .right {
     float: left;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @extend %centralise-inner-container;
 }
 
 .recipes-intro-section .left {
@@ -173,9 +170,7 @@
     background-color: $black;
     width: 100%;
     height: 600px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @extend %centralise-inner-container;
 }
 
 
@@ -201,24 +196,10 @@
     letter-spacing: 0;
 }
 
-.leaderboard-intro-bg {
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    z-index: -1;
-    top: 0px;
-    @extend %cover-background;
-    transition-property: transform;
-    transition-duration: .5s;
-    transition-timing-function: cubic-bezier;
-}
-
 .leaderboard-intro-section {
     width: 100%;
     height: 700px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @extend %centralise-inner-container;
     background-color: rgba(0,0,0,.4);
 }
 
@@ -233,89 +214,57 @@
 }
 
 // Sign-up / Sign-in -----------------------------------------------------------
-.sign-up-header,
-.sign-in-header {
-    position: relative;
-    max-width: 600px;
+
+.sign-up-section,
+.log-in-section {
+    margin-top: 65px;
+    min-height: 800px;
+    @extend %centralise-inner-container;
+    background-color: rgba(100,100,70,.4);
 }
 
-.sign-up-header {
-    top: 254px;
-}
-
-.sign-in-header {
-    top: 130px;
-}
-
-.column .sign-up-or-in-form-container {
-    display: flex;
-    justify-content: center;
-    padding: 50px;
-    margin: 50px auto;
-    width: 350px;
-    height: 510px;
-    text-align: center;
-    @extend %contain-background;
-}
-
-.red-pepper-img {
-    background-image: url(../images/chili-drawing-red-bell-pepper.png);
-}
-
-.column .chef-hat-img {
-    background-image: url(../images/chef-hat.png);
-    padding: 30px;
-    width: 458px;
-    height: 570px;
-    background-size: cover;
-}
-
-.sign-up-btn {
-    float: none;
-}
-
-.sign-up-or-in-form {
-    position: relative;
-    top: 172px;
-}
-
-.new-user-form li label {
-    color: #fff;
-    font-weight: 600;
-    letter-spacing: 4px;
-}
-
-.flame-img-1,
-.flame-img-2 {
-    position: absolute;
-    width: 400px;
-    height: 400px;
-    background-image: url(../images/flame2.jpg);
-    @extend %contain-background;
-}
-
-.flame-img-1 {
-    -moz-transform: scaleX(-1);
-    -o-transform: scaleX(-1);
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
-    filter: FlipH;
-    -ms-filter: 'FlipH';
-}
-
-.flame-img-2 {
-    right: 0;
-    bottom: 83px;
-}
-
-.new-user-form li .sign-in-label {
+.sign-up-section-content,
+.sign-up-form-container,
+.log-in-section-content,
+.log-in-form-container {
     color: $black;
+    background-color: $white;
 }
 
-.chep-gif {
-    height: 300px;
-    width: 300px;
-    margin: 50px 0 0;
+.sign-up-section-content {
+    border-radius: 26px 26px 0 0;
+}
+
+.log-in-section-content,
+.sign-up-section-content {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px 0 50px;
+    box-sizing: border-box;
+}
+
+.log-in-form-container,
+.sign-up-form-container {
+    padding: 0px 0 20px;
+    border-radius: 0 0 26px 26px;
+}
+
+.sign-up-section-content p,
+.log-in-section-content p {
+    padding: 30px 38px 0;
+    font-size: 12px;
+}
+
+.sign-up-form-container input,
+.log-in-form-container input {
+    font-size: 12px;
+    width: 50%;
+}
+
+.chef-gif {
+    position: relative;
+    width: 400px;
+    top: 2px;
 }
 
 // Profile page ----------------------------------------------------------------
@@ -392,317 +341,40 @@
 }
 
 // Recipes.html ----------------------------------------------------------------
-.recipe-header-box {
-    margin: 0 0 20px;
-    padding: 36px 44px 0;
+
+.recipe-section {
+    margin-top: 65px;
 }
 
-.recipes-bg ~ .container {
-    background-color: $transparent-white;
-    padding-bottom: 50px;
+.recipes-header-container {
+    height: 400px;
+    @extend %centralise-inner-container;
 }
 
-.full-length-recipe-row {
-    min-height: 200px;
-    padding: 0 0 0 24px;
-}
-
-// Ingredient / Recipes lists --------------------------------------------------
-
-.list-headings {
-    height: 16px;
-}
-
-.recipe-list-item,
-.ingredient-list-item {
-    display: inline-block;
-    float: left;
-    color: $black;
-}
-
-.recipe-list-item {
-    margin: 0 10px;
-    width: 200px;
-}
-
-.ingredient-list-item {
-    margin: 16px;
-    width: 30%;
-    background-color: $white;
-    border: 6px solid $veggie-green;
-    box-sizing: border-box;
-    border-radius: 8px;
-}
-
-.ingredient-list-item .row:nth-of-type(1) {
-    padding-bottom: 0;
-}
-
-.ingredient-list-item .row:nth-of-type(2) {
-    padding-top: 0;
-}
-
-.recipe-img,
-.ingredient-img {
-    width: 150px;
-    height: 150px;
-}
-
-.ingredient-img {
-    float: left;
-    padding: 20px 2px;
-}
-
-.recipe-row,
-.recipe-row-right {
-    float: left;
-}
-
-.recipe-row-right {
-    width: 28%;
-    padding: 14px;
-}
-
-.recipe-row {
-    width: 65%;
-    background-color: #fff;
-}
-
-.recipe-row-headings {
-    width: 69%;
-    border: 1px $beige solid;
-    padding: 10px;
-    background: #FF416C;
-    background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-    background: linear-gradient(to right, #FF4B2B, #FF416C);
-}
-
-.recipe-row-headings label {
+.recipes-header-container h1 {
     color: $white;
+    letter-spacing: 7px;
 }
 
-.recipe-row {
-    border: 1px $black solid;
-    margin: 20px 0 0 20px;
-    padding: 10px;
-    -webkit-box-shadow: 3px 4px 5px 0px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 3px 4px 5px 0px rgba(0, 0, 0, 0.75);
-    box-shadow: 3px 4px 5px 0px rgba(0, 0, 0, 0.75);
-    transition-property: background-color;
-    transition-duration: .5s;
-    transition-timing-function: linear;
-}
-
-.full-length-recipe-row .delete-recipe-row {
-    padding: 6px 0 6px 24px;
-    background-color: $transparent-red;
-    box-sizing: border-box;
-    width: 65%;
-    margin-left: 20px;
-}
-
-.inner-delete-recipe-row {
-    margin: 0 0 0 20px;
-    padding: 10px;
-}
-
-.delete-confirmation-message {
-    padding: 0px 0px 6px;
-}
-
-.ingredient-row {
-    width: 90%;
-}
-
-.recipe-row:hover {
-    background-color: $transparent-yellow;
-}
-
-.checkbox-switch {
-    width: 20px;
-    display: block;
-}
-
-.fa-smile,
-.fa-exclamation-circle {
-    font-size: 30px;
-}
-
-.fa-exclamation-circle {
-    color: $remove-red;
-}
-
-.fa-smile {
-    color: $add-green;
-}
-
-.ingredients-container {
-    background-color: $transparent-white;
-    padding: 36px;
-}
-
-.ingredients-container .row {
-    padding: 24px;
-}
-
-.ingredients-container .row a {
-    margin-left: 70px;
-}
-
-.ingredient-row {
+.recipe-container {
     background-color: $white;
-    margin: 10px 0;
+    width: 100%;
 }
 
-.ingredients-header-box {
-        padding: 36px 44px 0;
-        margin-bottom: 0;
+.recipe-content-container {
+    max-width: 1122px;
+    margin: 0 auto;
 }
 
-.ingredients-header-box button {
-    margin: 0 0 30px 0;
-}
+// Ingredient lists --------------------------------------------------
 
-.ingredients-header-box h3 {
-    margin: 26px 0;
-}
 
-//  Edit ingredients -----------------------------------------------------------
-.edit-ingredient-img {
-    width: 200px;
-    height: 200px;
-}
 
-.instructions-box {
-    width: 90%;
-    height: 198px;
-}
-
-.new-ingredient-container {
-    min-height: 150px;
-}
+// Edit ingredients -----------------------------------------------------------
 
 // Edit Recipes ----------------------------------------------------------------
-th,
-td {
-    width: 30%;
-    text-align: left;
-}
-
-.fa-minus-square,
-.fa-plus-square {
-    font-size: 40px;
-    cursor: pointer;
-}
-
-.fa-minus-square {
-    color: $remove-red;
-}
-
-.fa-plus-square {
-    color: $add-green;
-}
-
-.ingredient-box {
-    width: 40%;
-    margin: 0 5px 20px 0;
-}
 
 // Add_recipe.html -------------------------------------------------------------
 
-.add-a-recipe-section {
-    margin: 40px auto 0;
-}
-
-.add-a-recipe-header {
-    display: inline-block;
-    margin: 0 10px 0 0;
-}
-
-.add-a-recipe-header ~ p {
-    display: inline-block;
-}
-
-.add-recipe-list {
-    margin: 54px 0;
-}
-
-.add-recipe-list li label {
-    color: $black;
-}
-
-.add-recipe-list li {
-    margin: 0;
-}
-
-.add-recipe-list input {
-    width: 78%;
-}
-
-.add-recipe-button-row {
-    padding: 94px 0 20px;
-}
-
 // view_recipe.html ------------------------------------------------------------
 
-.view-recipe-bg ~ .view-recipe-container {
-    background-color: rgba(255,255,255,.9);
-    box-sizing: border-box;
-    margin: 10px auto;
-}
-
-.view-recipe-container a {
-    margin-bottom: 20px;
-}
-
-.view-recipe-container .recipe-details-section,
-.view-recipe-container .recipe-ingredients-section {
-    height: 700px;
-    border-radius: 20px;
-    margin: 0 2%;
-    padding: 20px;
-    width: 45%;
-}
-
-.view-recipe-container .recipe-details-section {
-    background-color: $transparent-red;
-}
-
-.view-recipe-container .recipe-ingredients-section {
-    background-color: $transparent-yellow;    
-}
-
-.recipe-details-section p {
-    padding: 0;
-    margin: 10px 0;
-}
-
-.view-recipe-container .section-title {
-    padding: 40px 0;
-    text-align: center;
-}
-
-.view-recipe-img {
-    border: $white 8px solid;
-    border-radius: 18px;
-    width: 290px;
-    height: 200px;
-}
-
-.recipe-details-container {
-    width: 100%;
-    background-color: $white;
-    padding: 20px;
-    box-sizing: border-box;
-    margin-top: 20px;
-}
-
-.recipe-ingredients-section ~ .row {
-    text-align: center;
-    padding-top: 50px;
-}
-
-.ingredients-list-table th,
-.ingredients-list-table td {
-    padding: 10px 10px 10px 0;
-}
