--- a/static/css/components/page-backgrounds.scss
+++ b/static/css/components/page-backgrounds.scss
@@ -1,3 +1,18 @@
+.leaderboard-intro-bg,
+.sign-up-bg,
+.log-in-bg,
+.recipes-bg {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    z-index: -1;
+    top: 0px;
+    @extend %cover-background;
+    transition-property: transform;
+    transition-duration: .5s;
+    transition-timing-function: cubic-bezier;
+}
+
 .home-image {
     background-image: url('../images/bbq.jpg');
 }
@@ -7,7 +22,8 @@
 }
 
 .recipes-bg {
-    background-image: url('../images/grill.jpg');
+    background-image: url('../images/bobby-rodriguezz-1052701-unsplash.jpg');
+    background-position: bottom;
 }
 
 .view-recipe-bg {
@@ -20,4 +36,12 @@
 
 .leaderboard-intro-bg {
     background-image: url('../images/elli-o-65548-unsplash.jpg');
+}
+
+.sign-up-bg {
+    background-image: url('../images/ali-yahya-270126-unsplash.jpg');
+}
+
+.log-in-bg {
+    background-image: url('../images/simple-322427-unsplash.jpg');
 }
