--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -1,22 +1,20 @@
 {% extends 'base.html' %} {% block content %}
-
-<section class="container standard-section-height sign-up-container no-overflow">
-    <div class="column sign-in-header pre-slide-in-from-left">
-        <h2 class="section-title uppercase flame">Log in!</h2>
-        <p>Already a member? Great news!</p>
-        <p>What are you waiting for?! Pop on your chef hat and get cooking...</p>
-        <img class="chep-gif" src="{{ url_for('static', filename='images/chef.webp') }}">
-    </div>
-    <div class="column pre-slide-in-from-right">
-        <div class="sign-up-or-in-form-container chef-hat-img">
-            <form action="{{ url_for('log_in') }}" method="POST" class="sign-up-or-in-form">
+<div class="log-in-bg"></div>
+<section class="log-in-section no-overflow">
+    <div class="container">
+        <img class="chef-gif" src="{{ url_for('static', filename='images/chef.webp') }}">
+        <div class="log-in-section-content center-text">
+            <h2 class="section-title uppercase">Log in!</h2>
+            <p>Already a member? Great news!</p>
+            <p>What are you waiting for?! Pop on your chef hat and get cooking...</p>
+        </div>
+        <div class="log-in-form-container center-text">
+            <form action="{{ url_for('log_in') }}" method="POST">
                 <div class="row">
-                    <ul class="new-user-form">
-                        <li><label for="email" class="sign-in-label">Email Address</label></li>
-                        <li><input id="email" name="email" type="email"></li>
-                        <li><label for="password" class="sign-in-label">Password</label></li>
-                        <li><input id="password" name="password" type="password"></li>
-                        <button class="no-float" type="submit">Submit</button>
+                    <ul class="log-in-form">
+                        <li><input id="email" name="email" type="email" placeholder="Email"></li>
+                        <li><input id="password" name="password" type="password" placeholder="Password"></li>
+                        <button class="no-float log-in-btn" type="submit">Submit</button>
                     </ul>
                 </div>
             </form>
