--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,25 +1,19 @@
 {% extends 'base.html' %} {% block content %}
 <div class="page-bg recipes-bg"></div>
-<section class="container standard-section-height">
-    <div class="sticky-div recipe-header-box">
-        <h2 class="section-title flame">Recipes list</h2>
-
-        <p>Please choose a recipe you would like to try from our list!</p>
-        <p>Alternatively, why not add your own and see if people like it?</p>
-        <a href="{{ url_for('add_recipe') }}"><button class="add-recipe-btn">Add recipe</button></a>
-
-        <div class="row">
-            <div class="list-headings recipe-row-headings">
-                <label class="recipe-list-item" for="">Picture</label>
-                <label class="recipe-list-item" for="">Recipe Name</label>
-                <label class="recipe-list-item" for="" User Rating>Flame Rating</label>
-            </div>
-        </div>
+<section class="recipe-section">
+    <div class="recipes-header-container center-text">
+        <h1 class="section-title">Recipes List</h1>
     </div>
-    <div class="recipe-list row">
-        {% for recipe in recipes_list %}
-        <div class="full-length-recipe-row">
-            <a href="{{ url_for('view_recipe', recipe_id=recipe._id) }}" class="clickable-link">
+    <div class="recipe-container">
+        <div class="recipe-content-container">
+            <p>Please choose a recipe you would like to try from our list!</p>
+            <p>Alternatively, why not add your own and see if people like it?</p>
+            <a href="{{ url_for('add_recipe') }}"><button class="add-recipe-btn">Add recipe</button></a>
+        </div>
+        <div class="row">
+            {% for recipe in recipes_list %}
+            <div class="full-length-recipe-row">
+                <a href="{{ url_for('view_recipe', recipe_id=recipe._id) }}" class="clickable-link">
                 <span class="clear-float recipe-row">
                     <span class="recipe-row-left">
                         <span class="recipe-list-item">
@@ -34,28 +28,29 @@
                     </span>
                 </span>
             </a> {% if recipe.author == user_id %}
-            <div class="recipe-row-right">
-                <button class="delete-recipe-btn" id="{{ recipe.author }}">Delete</button>
-                <a class="edit-recipe-btn" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">
+                <div class="recipe-row-right">
+                    <button class="delete-recipe-btn" id="{{ recipe.author }}">Delete</button>
+                    <a class="edit-recipe-btn" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">
                     <button class="center-text">Edit</button>
                 </a>
-            </div>
-            <div class="row delete-recipe-row hide-me hidden-div">
-                <div class="inner-delete-recipe-row">
-                    <form action="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" method="POST">
-                        <p class="delete-confirmation-message uppercase">Are you sure you wish to delete this recipe?!</p>
-                        <div class="row">
-                            <button class="confirm-delete-recipe-btn div-btn center-text center-div">Confirm Delete</button>
-                            <div class="cancel-delete-recipe-btn div-btn center-text center-div">Cancel</div>
-                        </div>
-                    </form>
                 </div>
+                <div class="row delete-recipe-row hide-me hidden-div">
+                    <div class="inner-delete-recipe-row">
+                        <form action="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" method="POST">
+                            <p class="delete-confirmation-message uppercase">Are you sure you wish to delete this recipe?!</p>
+                            <div class="row">
+                                <button class="confirm-delete-recipe-btn div-btn center-text center-div">Confirm Delete</button>
+                                <div class="cancel-delete-recipe-btn div-btn center-text center-div">Cancel</div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                {% else %}
+                <div class="recipe-row-right"></div>
+                {% endif %}
             </div>
-            {% else %}
-            <div class="recipe-row-right"></div>
-            {% endif %}
+            {% endfor %}
         </div>
-        {% endfor %}
     </div>
 </section>
 {% endblock %}
