--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,33 +1,23 @@
 {% extends 'base.html' %} {% block content %}
-<div class="full-width-div">
-    <div class="flame-img-1"></div>
-    <div class="flame-img-2"></div>
-</div>
-<section class="container standard-section-height sign-up-container no-overflow">
-    <div class="column sign-up-header pre-slide-in-from-left">
-        <h2 class="section-title uppercase flame">Become the Master Chef!</h2>
-        <p>The sooner you sign up, the sooner you can add recipes, the sooner you can be King of the World! Or the website at least. <i class="far fa-smile-beam"></i></p>
-        <p>Just a few details for now, then head over to your profile page to personalise when you're ready.</p>
-    </div>
-    <div class="column pre-slide-in-from-right">
-        <div class="sign-up-or-in-form-container red-pepper-img">
-            <form action="{{ url_for('add_new_user') }}" method="POST" class="sign-up-or-in-form">
+<div class="sign-up-bg"></div>
+<section class="sign-up-section no-overflow">
+    <div class="container">
+        <div class="sign-up-section-content pre-slide-in-from-left center-text">
+            <h2 class="section-title uppercase">Become the Master Chef</h2>
+            <p>The sooner you sign up, the sooner you can add recipes, the sooner you can be King of the World! Or the website at least. <i class="far fa-smile-beam"></i></p>
+            <p>Just a few details for now, then head over to your profile page to personalise when you're ready.</p>
+        </div>
+        <div class="sign-up-form-container pre-slide-in-from-right center-text">
+            <form action="{{ url_for('add_new_user') }}" method="POST">
                 <div class="row">
                     <ul class="new-user-form">
-                        <li><label for="email">Email Address</label></li>
-                        <li><input class="center-text" id="email" name="email" type="email"></li>
-                        <li><label for="password">Password</label></li>
-                        <li><input class="center-text" id="password" required minlength="5" name="password" type="password"></li>
-                        <li><label for="password2">Confirm Password</label></li>
-                        <li><input class="center-text" id="password2" required minlength="5" name="password2" type="password"></li>
+                        <li><input class="center-text" id="email" name="email" type="email" placeholder="Email"></li>
+                        <li><input class="center-text" id="password" required minlength="5" name="password" type="password" placeholder="Password"></li>
+                        <li><input class="center-text" id="password2" required minlength="5" name="password2" type="password" placeholder="Confirm password"></li>
                         <div class="hidden-div">
-                            <li><label for="first_name">First Name</label></li>
                             <li><input id="first_name" name="first_name" type="text" value="TBC"></li>
-                            <li><label for="surname">Surname</label></li>
                             <li><input id="surname" name="surname" type="text" value="TBC"></li>
-                            <li><label for="country">Country</label></li>
                             <li><input id="country" name="country" type="text" value="TBC"></li>
-                            <li><label for="user_photo">Your Photo Image Address</label></li>
                             <li><input id="user_photo" name="user_photo" type="text" value="https://mongoose-os.com/images/generic_user.png"></li>
                         </div>
                         <button type="submit" class="sign-up-btn">Submit</button>
