--- a/static/css/components/pages.scss
+++ b/static/css/components/pages.scss
@@ -346,6 +346,12 @@
     margin-top: 65px;
 }
 
+.recipe-section .container {
+    background-color: $white;
+    width: 100%;
+    max-width: none;
+}
+
 .recipes-header-container {
     height: 400px;
     @extend %centralise-inner-container;
@@ -358,12 +364,91 @@
 
 .recipe-container {
     background-color: $white;
-    width: 100%;
+    max-width: 1122px;
+    margin: 0 auto;
 }
 
 .recipe-content-container {
-    max-width: 1122px;
-    margin: 0 auto;
+    background-color: $black;
+    color: $white;
+    padding: 8px 0;
+    margin: 0 auto 54px;
+    position: sticky;
+    top: 65px;
+    z-index: 3;
+}
+
+.recipe-container img {
+    width: 160px;
+    height: 150px;
+    float: left;
+}
+
+.recipe {
+    margin: 10px 10px 10px 0;
+    width: 30%;
+    float: left;
+    padding: 12px;
+    background-color: rgb(255, 251, 238);
+    -webkit-box-shadow: 3px 6px 17px -5px rgba(0,0,0,0.75);
+    -moz-box-shadow: 3px 6px 17px -5px rgba(0,0,0,0.75);
+    box-shadow: 3px 6px 17px -5px rgba(0,0,0,0.75);
+}
+
+.recipe p {
+    color: $black;
+    max-width: 148px;
+}
+
+.recipe p:nth-of-type(1) {
+    font-weight: 600;
+}
+
+.recipe-details-container {
+    padding: 5px 0 0 25px;
+    display: inline-block;
+}
+
+.recipe a .recipe-row-top {
+    background-color: rgb(255, 251, 238);
+    transition: all 1s linear;
+}
+
+.recipe a .recipe-row-top:hover {
+    background-color: rgb(232, 228, 214);
+}
+
+.recipe-row-top,
+.recipe-row-bottom {
+    display: block;
+}
+
+a ~ .recipe-row-bottom {
+    clear: both;
+    height: 60px;
+    @extend %centralise-inner-container;
+}
+
+.recipe-row-bottom button {
+    margin: 10px 5px;
+}
+
+.inner-delete-recipe-row form .delete-confirmation-message {
+    max-width: 98%;
+    margin: 56px auto 20px ;
+    padding: 0;
+}
+
+.inner-delete-recipe-row .row {
+    @extend %centralise-inner-container;
+}
+
+.recipe-container .delete-recipe-row {
+    position: absolute;
+    z-index: 1;
+    background-color: $flame-orange;
+    width: 336px;
+    height: 220px;
 }
 
 // Ingredient lists --------------------------------------------------
