--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -4,52 +4,53 @@
     <div class="recipes-header-container center-text">
         <h1 class="section-title">Recipes List</h1>
     </div>
-    <div class="recipe-container">
-        <div class="recipe-content-container">
-            <p>Please choose a recipe you would like to try from our list!</p>
-            <p>Alternatively, why not add your own and see if people like it?</p>
+    <div class="container">
+        <div class="recipe-content-container center-text">
+            <p>Please choose a recipe you would like to try from our list!<br>Alternatively, why not add your own and see if people like it?</p>
             <a href="{{ url_for('add_recipe') }}"><button class="add-recipe-btn">Add recipe</button></a>
         </div>
-        <div class="row">
+        <div class="recipe-container">
             {% for recipe in recipes_list %}
-            <div class="full-length-recipe-row">
-                <a href="{{ url_for('view_recipe', recipe_id=recipe._id) }}" class="clickable-link">
-                <span class="clear-float recipe-row">
-                    <span class="recipe-row-left">
-                        <span class="recipe-list-item">
-                            {% if recipe.recipe_image_url %}
-                            <img class="recipe-img" src="{{ recipe.recipe_image_url }}"></img>
-                            {% else %}
-                            <img class="recipe-img" src="{{ url_for('static', filename='images/food-default.jpg') }}"></img>
-                            {% endif %}
-                        </span>
-                        <p class="recipe-list-item">{{ recipe.recipe_name.title() }}</p>
-                        <p class="recipe-list-item">Not yet rated</p>
-                    </span>
-                </span>
-            </a> {% if recipe.author == user_id %}
-                <div class="recipe-row-right">
-                    <button class="delete-recipe-btn" id="{{ recipe.author }}">Delete</button>
-                    <a class="edit-recipe-btn" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">
-                    <button class="center-text">Edit</button>
-                </a>
-                </div>
+            <div class="recipe">
+                {% if recipe.author == user_id %}
                 <div class="row delete-recipe-row hide-me hidden-div">
                     <div class="inner-delete-recipe-row">
                         <form action="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" method="POST">
-                            <p class="delete-confirmation-message uppercase">Are you sure you wish to delete this recipe?!</p>
+                            <p class="delete-confirmation-message uppercase center-text">Are you sure you wish to delete this recipe?!</p>
                             <div class="row">
-                                <button class="confirm-delete-recipe-btn div-btn center-text center-div">Confirm Delete</button>
+                                <button class="confirm-delete-recipe-btn div-btn center-text center-div">Confirm</button>
                                 <div class="cancel-delete-recipe-btn div-btn center-text center-div">Cancel</div>
                             </div>
                         </form>
                     </div>
                 </div>
+                {% endif %}
+                <a href="{{ url_for('view_recipe', username=username, recipe_id=recipe._id) }}">
+                    <span class="recipe-row-top container">
+                        {% if recipe.recipe_image_url %}
+                        <img class="recipe-img" src="{{ recipe.recipe_image_url }}"></img>
+                        {% else %}
+                        <img class="recipe-img" src="{{ url_for('static', filename='images/food-default.jpg') }}"></img>
+                        {% endif %}
+                        <span class="recipe-details-container">
+                            <p class="recipe-list-item">{{ recipe.recipe_name.title() }}</p>
+                            <p class="recipe-list-item">Not yet rated</p>
+                        </span>
+                    </span>
+                </a>
+                {% if recipe.author == user_id %}
+                <div class="recipe-row-bottom">
+                    <button class="delete-recipe-btn" id="{{ recipe.author }}">Delete</button>
+                    <a class="edit-recipe-btn" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">
+                        <button class="center-text">Edit</button>
+                    </a>
+                </div>
                 {% else %}
-                <div class="recipe-row-right"></div>
+                <div class="recipe-row-bottom"></div>
                 {% endif %}
             </div>
             {% endfor %}
+
         </div>
     </div>
 </section>
