Restyled ingredients.html

--- a/static/css/components/page-backgrounds.scss
+++ b/static/css/components/page-backgrounds.scss
@@ -1,7 +1,8 @@
 .leaderboard-intro-bg,
 .sign-up-bg,
 .log-in-bg,
-.recipes-bg {
+.recipes-bg,
+.ingredients-bg {
     width: 100%;
     height: 100vh;
     position: fixed;
