--- a/static/css/helpers/placeholders.scss
+++ b/static/css/helpers/placeholders.scss
@@ -16,6 +16,12 @@
     box-shadow: 0px 10px 7px -8px rgba(0,0,0,0.75);
 }
 
+%list-item-shadow {
+    -webkit-box-shadow: 3px 6px 17px -5px rgba(0,0,0,0.75);
+    -moz-box-shadow: 3px 6px 17px -5px rgba(0,0,0,0.75);
+    box-shadow: 3px 6px 17px -5px rgba(0,0,0,0.75);
+}
+
 %cover-background {
     background-repeat: no-repeat;
     background-position: center;
