--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -50,17 +50,23 @@ header {
   -moz-box-shadow: 0px 10px 7px -8px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 10px 7px -8px rgba(0, 0, 0, 0.75); }
 
+.recipe, .ingredient {
+  -webkit-box-shadow: 3px 6px 17px -5px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 3px 6px 17px -5px rgba(0, 0, 0, 0.75);
+  box-shadow: 3px 6px 17px -5px rgba(0, 0, 0, 0.75); }
+
 .leaderboard-intro-bg,
 .sign-up-bg,
 .log-in-bg,
-.recipes-bg {
+.recipes-bg,
+.ingredients-bg {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover; }
 
 .welcome-message, .left,
 .right, .fire-text-quote, .leaderboard-intro-section, .sign-up-section,
-.log-in-section, .recipes-header-container, a ~ .recipe-row-bottom, .inner-delete-recipe-row .row {
+.log-in-section, a ~ .recipe-row-bottom, .inner-delete-recipe-row .row, .header-container {
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -550,27 +556,28 @@ nav ul li {
   letter-spacing: 3px;
   margin-top: 0; }
 
-.recipe-section {
+.recipe-section,
+.ingredients-section {
   margin-top: 65px; }
 
-.recipe-section .container {
+.recipe-section .container,
+.ingredients-section .container {
   background-color: #fff;
   width: 100%;
   max-width: none; }
 
-.recipes-header-container {
-  height: 400px; }
-
-.recipes-header-container h1 {
+.header-container h1 {
   color: #fff;
   letter-spacing: 7px; }
 
-.recipe-container {
+.recipe-container,
+.ingredients-container {
   background-color: #fff;
   max-width: 1122px;
   margin: 0 auto; }
 
-.recipe-content-container {
+.recipe-content-container,
+.ingredient-content-container {
   background-color: #000;
   color: #fff;
   padding: 8px 0;
@@ -589,10 +596,7 @@ nav ul li {
   width: 30%;
   float: left;
   padding: 12px;
-  background-color: #fffbee;
-  -webkit-box-shadow: 3px 6px 17px -5px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 3px 6px 17px -5px rgba(0, 0, 0, 0.75);
-  box-shadow: 3px 6px 17px -5px rgba(0, 0, 0, 0.75); }
+  background-color: #fffbee; }
 
 .recipe p {
   color: #000;
@@ -605,7 +609,8 @@ nav ul li {
   padding: 5px 0 0 25px;
   display: inline-block; }
 
-.recipe a .recipe-row-top {
+.recipe a .recipe-row-top,
+.ingredient {
   background-color: #fffbee;
   transition: all 1s linear; }
 
@@ -635,10 +640,46 @@ a ~ .recipe-row-bottom {
   width: 336px;
   height: 220px; }
 
+.ingredient img {
+  width: 85px;
+  height: 80px;
+  float: left;
+  margin-right: 18px; }
+
+.ingredient {
+  width: 23%;
+  float: left;
+  padding: 8px;
+  box-sizing: border-box;
+  margin: 10px; }
+
+.ingredient p {
+  padding: 0;
+  margin: 0 0 10px 0; }
+
+.ingredient p:nth-of-type(1) {
+  font-weight: 600; }
+
+.ingredient-content-container button {
+  font-size: 14px;
+  margin: 30px 0; }
+
+.fa-exclamation-circle {
+  color: #f00; }
+
+.fa-smile {
+  color: #00f500; }
+
+.ingredient button {
+  width: 100px;
+  height: 42px;
+  float: right; }
+
 .leaderboard-intro-bg,
 .sign-up-bg,
 .log-in-bg,
-.recipes-bg {
+.recipes-bg,
+.ingredients-bg {
   width: 100%;
   height: 100vh;
   position: fixed;
@@ -704,7 +745,8 @@ section:after,
 .container:after,
 .recipe-row-bottom:after,
 .recipe-container:after,
-a:after {
+a:after,
+.ingredients-container:after {
   clear: both;
   content: "";
   display: block; }
@@ -811,5 +853,8 @@ ul {
 
 .no-float {
   float: none; }
+
+.header-container {
+  height: 400px; }
 
 /*# sourceMappingURL=styles.css.map */
