--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 <div class="page-bg recipes-bg"></div>
 <section class="recipe-section">
-    <div class="recipes-header-container center-text">
+    <div class="header-container center-text">
         <h1 class="section-title">Recipes List</h1>
     </div>
     <div class="container">
